fix scrollbar on x axis

--- a/client/src/components/AdminMenu/DegGropsList/ShowDegGroups/ShowDegGroups.module.css
+++ b/client/src/components/AdminMenu/DegGropsList/ShowDegGroups/ShowDegGroups.module.css
@@ -6,7 +6,7 @@
 
 .ShowDegGroups_table_container {
   height: 85%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .ShowDegGroups_table_container::-webkit-scrollbar {
   width: .3rem;
