--- a/client/src/components/AdminMenu/SystemMenu/LogEvents/LogEvents.module.css
+++ b/client/src/components/AdminMenu/SystemMenu/LogEvents/LogEvents.module.css
@@ -18,7 +18,7 @@
     text-align: left;
     width: 100%;
     height: 75%;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 .Logs::-webkit-scrollbar {
     width: .5rem;
