--- a/client/src/components/AdminMenu/WineList/ShowWineTable/ShowWineTable.module.css
+++ b/client/src/components/AdminMenu/WineList/ShowWineTable/ShowWineTable.module.css
@@ -28,7 +28,7 @@
 }
 .WineList_table_container {
     height: 85%;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 .WineList_table_container::-webkit-scrollbar {
     width: .3rem;
