--- a/client/src/components/AdminMenu/WineResults/ResultsByCategory/ResultsCategory.module.css
+++ b/client/src/components/AdminMenu/WineResults/ResultsByCategory/ResultsCategory.module.css
@@ -14,7 +14,7 @@
 }
 .ResultsByCategoty_table {
   height: 85%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .ResultsByCategoty_table::-webkit-scrollbar {
   width: 0.3rem;
