--- a/client/src/components/AdminMenu/WineResults/ResultsByDegustator/ResultsByDegustator.module.css
+++ b/client/src/components/AdminMenu/WineResults/ResultsByDegustator/ResultsByDegustator.module.css
@@ -11,7 +11,7 @@
 }
 .ResultsByDegustator_table {
   height: 85%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .ResultsByDegustator_table::-webkit-scrollbar {
   width: 0.3rem;
