--- a/client/src/components/AdminMenu/WineResults/ResultsByWineId/ResultsByWineId.module.css
+++ b/client/src/components/AdminMenu/WineResults/ResultsByWineId/ResultsByWineId.module.css
@@ -1,6 +1,6 @@
 .Results_Table {
   height: 70%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .Results_Table::-webkit-scrollbar {
