--- a/client/src/hoc/ElementWrapper/ElementWrapper.module.css
+++ b/client/src/hoc/ElementWrapper/ElementWrapper.module.css
@@ -27,7 +27,7 @@
   margin: 15px 20px 50px 20px;
   padding: 0 10px;
   background-color: rgba(107, 11, 25, 0.733);
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .ScrollWrapper::-webkit-scrollbar {
   width: 0.5rem;
@@ -59,7 +59,7 @@
   border-radius: 8px;
   margin: 20px 20px;
   background-color: rgba(107, 11, 25, 0.733);
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .DraggableWrapper::-webkit-scrollbar {
   width: 0.3rem;
@@ -79,7 +79,7 @@
   justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .GroupWrapper::-webkit-scrollbar {
   width: 0.3rem;
@@ -107,7 +107,7 @@
   border-radius: 8px;
   margin: 20px 20px 50px 20px;
   background-color: rgba(107, 11, 25, 0.733);
-  overflow: scroll;
+  overflow-y: scroll;
 }
 .ResulWrapper::-webkit-scrollbar {
   width: 0.3rem;
